--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="Favour Kolade" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Hospital Medical Equipment Transport Vehicle</h2>
@@ -59,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="Favour Kolade" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Task Tracker Application</h2>
@@ -72,7 +72,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="Favour Kolade" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Django Polling Website</h2>
