--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="Favour Kolade" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/hmetv-logo.png" alt="Favour Kolade" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Hospital Medical Equipment Transport Vehicle</h2>
