testing contact form

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<p>If you know of any opportunities for me, please reach out</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="send_email.php">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
