--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<!--<li><a href="" class="button submit">Send Message</a></li>-->
+											<input type="submit" value="Send">
 										</ul>
 									</form>
 								</section>
