--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<p>If you know of any opportunities for me, please reach out</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="send_email.php">
+									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -147,8 +147,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<!--<li><a href="" class="button submit">Send Message</a></li>-->
-											<input type="submit" value="Send">
+											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
