--- a/index.html
+++ b/index.html
@@ -129,47 +129,21 @@
 						<div class="inner">
 							<h2>Connect with me</h2>
 							<p>If you know of any opportunities for me, please reach out</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="send_email.php">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<!--<li><a href="" class="button submit">Send Message</a></li>-->
-											<input type="submit" value="Send Message">
-										</ul>
-									</form>
-								</section>
 								<section>
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<p>Dallas, TX</p>
+											<p>Arlington, TX</p>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">favourkolade03@gmail.com</a>
+											<a href="mailto:favourkolade03@gmail.com">favourkolade03@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="mailto:favourkolade03@gmail.com" class="fa fa-envelope"><span class="label">Gmail</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="https://github.com/Favk" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/favour-kolade/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
