--- a/generic.html
+++ b/generic.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Task Tracker Application</h1>
-							<span class="image fit"><img src="images/Hospital Medical Equipment Transport Vehicle Logo.png" alt="HETV Logo" /></span>
+							<span class="image fit"><img src="images/angular.png" alt="HETV Logo" /></span>
 							<h2>Project Overview</h2>
                             <p>Built a comprehensive task tracker web application during an internship, utilizing Angular for front-end development. The project focused on creating an intuitive and interactive user experience.</p>
 							<h3>Features:</h3>
