--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="Favour Kolade" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/angular.png" alt="Favour Kolade" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Task Tracker Application</h2>
@@ -72,7 +72,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="Favour Kolade" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/django-logo-positive.png" alt="Favour Kolade" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Django Polling Website</h2>
@@ -143,8 +143,8 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="mailto:favourkolade03@gmail.com" class="fa fa-envelope"><span class="label">Gmail</span></a></li>
-												<li><a href="https://github.com/Favk" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/favour-kolade/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/Favk" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/favour-kolade/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
