--- a/polling.html
+++ b/polling.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Django Polling Website</h1>
-							<span class="image fit"><img src="images/Hospital Medical Equipment Transport Vehicle Logo.png" alt="HETV Logo" /></span>
+							<span class="image fit"><img src="images/django-logo-positive.png" alt="HETV Logo" /></span>
 							<h2>Project Overview</h2>
 							<p>Developed a polling application during an internship with Aleric Technologies, following the official Django documentation. This project aimed to learn the fundamentals of Django while creating a functional web application.</p>
 							<h3>Features:</h3>
