--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Favour Kolade</h1>
 							<p>A recent Software Engineering graduate from the University of Texas at Arlington, I’ve honed my skills in full stack development, cybersecurity, and Agile methodologies through hands-on projects and internships. My experience includes developing applications using technologies like Angular, Django, Python, and Java, and contributing to innovative solutions such as a hospital equipment transport vehicle and a student information exchange app. I’m passionate about leveraging technology to solve real-world problems and enhance user experiences. Let’s connect and explore how I can contribute to your next big project!
-								<br><br>Check out my projects on GitHub: <a href="https://github.com/Favk">Favour's GitHub</a>.</p>
+								<br><br>Check out my projects on GitHub: <a href="https://github.com/Favk" target="_blank">Favour's GitHub</a></p>
 							<ul class="actions">
 								<li><a href="https://drive.google.com/file/d/1xuS2m955mi7B92zl29-HGJMfKwGKGXa-/view?usp=drive_link" target="_blank" class="button scrolly">My Resume</a></li>
 							</ul>
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/hmetv-logo.png" alt="Favour Kolade" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/hmetv-logo.png" alt="Favour Kolade" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Hospital Medical Equipment Transport Vehicle</h2>
@@ -77,8 +77,9 @@
 								<div class="inner">
 									<h2>Django Polling Website</h2>
 									<p>Developed a polling application during an internship with Aleric Technologies, following the official Django documentation. This project aimed to learn the fundamentals of Django while creating a functional web application.</p>
+									<p><a href="https://github.com/Favk/Django-polling-website" target="_blank">Django Polling website</a></p>
 									<ul class="actions">
-										<li><a href="polling.html" class="button">Learn more</a></li>
+										<li><a href="polling.html" target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
