--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<p>A recent Software Engineering graduate from the University of Texas at Arlington, I’ve honed my skills in full stack development, cybersecurity, and Agile methodologies through hands-on projects and internships. My experience includes developing applications using technologies like Angular, Django, Python, and Java, and contributing to innovative solutions such as a hospital equipment transport vehicle and a student information exchange app. I’m passionate about leveraging technology to solve real-world problems and enhance user experiences. Let’s connect and explore how I can contribute to your next big project!
 								<br><br>Check out my projects on GitHub: <a href="https://github.com/Favk" target="_blank">Favour's GitHub</a></p>
 							<ul class="actions">
-								<li><a href="https://drive.google.com/file/d/1xuS2m955mi7B92zl29-HGJMfKwGKGXa-/view?usp=sharing" target="_blank" class="button scrolly">My Resume</a></li>
+								<li><a href="https://docs.google.com/document/d/1AZEczLD5ti7i-cMbekzcrBPP2vDzsMGf/edit?usp=sharing&ouid=105995215897774557503&rtpof=true&sd=true" target="_blank" class="button scrolly">My Resume</a></li>
 							</ul>
 						</div>
 					</section>
