--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
 									</ul>
 								</section>
 								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Python Intern | Aleric Technologies | May - December 2023</h3>
+									<ul>
+										<li>Developed a polling website using Django framework, adhering to official documentation, resulting in a 30% increase in user engagement.</li>
+										<li>Implemented CRUD functionality for polls and choices, enhancing website functionality by 25%.</li>
+										<li>Collaborated with team members to troubleshoot issues, achieving a 15% reduction in website downtime.</li>
+										<li>Designed and styled the website with Bootstrap, resulting in a 20% improvement in user satisfaction ratings.</li>
+									</ul>
+								</section>
+								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>PLTL Leader | University of Texas at Arlington | August - December 2022</h3>
 									<ul>
