--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
 							<h2>Experience</h2>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Python Intern | Aleric Technologies | May - December 2023</h3>
+									<span class="icon solid major fa-gear"></span>
+									<h3>Software Engineer Fellow | Headstarter | July 2024 - Present</h3>
 									<ul>
-										<li>Developed a polling website using Django framework, adhering to official documentation, resulting in a 30% increase in user engagement.</li>
-										<li>Implemented CRUD functionality for polls and choices, enhancing website functionality by 25%.</li>
-										<li>Collaborated with team members to troubleshoot issues, achieving a 15% reduction in website downtime.</li>
-										<li>Designed and styled the website with Bootstrap, resulting in a 20% improvement in user satisfaction ratings.</li>
+										<li>Developed and deployed 5 AI-driven web applications using React JS, Next.js, Firebase, and Vercel, leveraging CI/CD pipelines for iterative deployment.</li>
+										<li>Worked in a team of 4 engineers in an Agile environment to deliver scalable applications, integrating APIs and microservices..</li>
+										<li>Developed cloud-native applications using AWS services to build scalable web applications.</li>
+										<li>Scaled each web-app to 50+ users, iterated on user feedback to make continuous optimizations.</li>
+										<li>Integrated CI/CD pipelines for continuous deployment and testing in agile development environments.</li>
 									</ul>
 								</section>
 								<section>
@@ -111,9 +112,9 @@
 									<h3>PLTL Leader | University of Texas at Arlington | August - December 2022</h3>
 									<ul>
 										<li>Conducted sessions with 8 learners, twice a week to comprehend difficult concepts and encouraged self-discovery through question/answer guides, leading to a 20% GPA increase.</li>
-										<li>Organized weekly team meetings with stakeholder collaboration to develop robust curriculum plans, resulting in 91% student course completion.</li>
+										<li>Participated in weekly team meetings with 10 stakeholders over 5 months to develop comprehensive curriculum plans, achieving a 91% student course completion rate and improving retention by 5%.</li>
 										<li>Communicated with colleagues to discover new teaching methods, enhancing student understanding and engagement, which improved class participation rates.</li>
-										<li>Facilitated quality learning experiences amongst 8 learners by providing individualized feedback on assessments having 98% accuracy rate and 45 hours of mentorship provided.</li>
+										<li>Mentored 8 students through 45 hours of individualized instruction, maintaining a 98% accuracy rate in assessment feedback, leading to a 6% increase in overall class performance.</li>
 									</ul>
 								</section>
 								<section>
