--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<h2>Experience</h2>
 							<div class="features">
 								<section>
-									<span class="icon fa-solid fa-gear"></span>
+									<span class="icon solid major fa-cog"></span>
 									<h3>Software Engineer Fellow | Headstarter | July 2024 - Present</h3>
 									<ul>
 										<li>Developed and deployed 5 AI-driven web applications using React JS, Next.js, Firebase, and Vercel, leveraging CI/CD pipelines for iterative deployment.</li>
