updated work experience

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Software Engineer Fellow | Headstarter | July 2024 - Present</h3>
+									<h3>Software Engineer Fellow | Headstarter | July - September 2024</h3>
 									<ul>
 										<li>Developed and deployed 5 AI-driven web applications using React JS, Next.js, Firebase, and Vercel, leveraging CI/CD pipelines for iterative deployment.</li>
 										<li>Worked in a team of 4 engineers in an Agile environment to deliver scalable applications, integrating APIs and microservices..</li>
