--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-cog"></span>
+									<h3>Software Engineer Intern | Gradient Connect | October 2024 - Presesnt</h3>
+									<ul>
+										<li>Enhanced app functionality by setting up navigation and privacy sections, allowing users to access dedicated pages seamlessly; preparing to
+											implement core logic for improved user experience.</li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-cog"></span>
 									<h3>Software Engineer Fellow | Headstarter | July - September 2024</h3>
 									<ul>
 										<li>Developed and deployed 5 AI-driven web applications using React JS, Next.js, Firebase, and Vercel, leveraging CI/CD pipelines for iterative deployment.</li>
