--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 									<ul>
 										<li>Enhanced app functionality by setting up navigation and privacy sections, allowing users to access dedicated pages seamlessly; preparing to
 											implement core logic for improved user experience.</li>
+                                        <li>Validated and corrected database interactions to guarantee the integrity and completeness of user workout history data.</li>
+                                        <li>Improved navigation reliability during a React Native-to-Expo migration by identifying and fixing broken routes, redirecting them to correct screens, or disabling non-functional routes to enhance user experience.</li>
 									</ul>
 								</section>
 								<section>
