--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 							<p>As a recent Software Engineering graduate with hands-on experience in AI-driven web app development, I’m passionate about creating scalable, user-focused solutions. My journey includes building web apps with React, Next.js, and Django, integrating cloud services like AWS, and optimizing deployments through CI/CD pipelines. I’ve also contributed to projects ranging from mobile app development to implementing secure systems in an Agile environment.<br> Currently, I’m seeking full-time opportunities where I can leverage my skills in Python, MySQL, and cloud technologies while expanding my expertise in cybersecurity. With a strong foundation in software engineering and a curiosity for secure systems, I’m driven to contribute to innovative, real-world solutions that make a lasting impact. Let’s connect and explore how I can contribute to your next big project!
 								<br><br>Check out my projects on GitHub: <a href="https://github.com/Favk" target="_blank">Favour's GitHub</a></p>
 							<ul class="actions">
-								<li><a href="https://docs.google.com/document/d/11ZPKeNejR_ArulGEjTwOFibUcH9d2Bb8/edit?usp=sharing&ouid=105995215897774557503&rtpof=true&sd=true">My Resume</a></li>
-							</ul>
+								<button type="button"><a href="https://docs.google.com/document/d/11ZPKeNejR_ArulGEjTwOFibUcH9d2Bb8/edit?usp=sharing&ouid=105995215897774557503&rtpof=true&sd=true">My Resume</a></button>
+                                <button type="button"><a href="https://www.linkedin.com/in/favour-kolade/">LinkedIn Profile</a></button>
+                            </ul>
 						</div>
 					</section>
 
