--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 								<br><br>Check out my projects on GitHub: <a href="https://github.com/Favk" target="_blank">Favour's GitHub</a></p>
 						    <h1>Connect with me</h1><br>
                             <ul class="actions">
-								<button type="button"><a href="https://docs.google.com/document/d/11ZPKeNejR_ArulGEjTwOFibUcH9d2Bb8/edit?usp=sharing&ouid=105995215897774557503&rtpof=true&sd=true">My Resume</a></button>
-                                <button type="button"><a href="https://www.linkedin.com/in/favour-kolade/">LinkedIn Profile</a></button>
+								<button type="button"><a href="https://docs.google.com/document/d/11ZPKeNejR_ArulGEjTwOFibUcH9d2Bb8/edit?usp=sharing&ouid=105995215897774557503&rtpof=true&sd=true" target="_blank">My Resume</a></button>
+                                <button type="button"><a href="https://www.linkedin.com/in/favour-kolade/" target="_blank">LinkedIn Profile</a></button>
                             </ul>
 						</div>
 					</section>
