--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Favour Kolade</h1>
-							<p>As a recent Software Engineering graduate with hands-on experience in AI-driven web app development, I’m passionate about creating scalable, user-focused solutions. My journey includes building web apps with React, Next.js, and Django, integrating cloud services like AWS, and optimizing deployments through CI/CD pipelines. I’ve also contributed to projects ranging from mobile app development to implementing secure systems in an Agile environment.<br> Currently, I’m seeking full-time opportunities where I can leverage my skills in Python, MySQL, and cloud technologies while expanding my expertise in cybersecurity. With a strong foundation in software engineering and a curiosity for secure systems, I’m driven to contribute to innovative, real-world solutions that make a lasting impact. Let’s connect and explore how I can contribute to your next big project!
+							<p>I’m a first year Master’s student at Carnegie Mellon University, Heinz College in Information Security Policy and Management, with a passion for building secure, user-focused technology. My background combines software engineering and cybersecurity, with experience in developing AI-driven web applications using React, Django, and AWS, as well as hands-on security work utilizing Nmap, Splunk, and the ELK Stack for network scanning, monitoring, and threat detection.
+
+                                <br><br>I’ve delivered scalable, cloud-native solutions, enhanced system reliability, and created engaging user experiences through internships and fellowships in the tech industry. Skilled in Python, Java, MySQL, and cloud platforms, I enjoy tackling challenges where innovation and security meet.
+                                
+                                <br><br>As I start my graduate journey this fall, I’m excited to bring my technical skills, curiosity, and problem-solving mindset to a full-time role where I can contribute to impactful, forward-thinking projects.
 								<br><br>Check out my projects on GitHub: <a href="https://github.com/Favk" target="_blank">Favour's GitHub</a></p>
 						    <h1>Connect with me</h1><br>
                             <ul class="actions">
@@ -187,7 +191,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<p>Arlington, TX</p>
+											<p>Pittsburgh, PA</p>
 										</li>
 										<li>
 											<h3>Email</h3>
