--- a/index.html
+++ b/index.html
@@ -92,9 +92,20 @@
 						<div class="inner">
 							<h2>Experience</h2>
 							<div class="features">
+                                <section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Cyber Security Analyst Intern | Platview Technologies Limited | July 2024 - April 2025</h3>
+									<ul>
+                                        <li>Developed and applied foundational cybersecurity principles, enhancing security knowledge and practical skills.</li>
+                                        <li>Mastered subnetting, IP configuration, and network analysis techniques to support secure network design and troubleshooting.</li>
+                                        <li>Utilized tools like Nmap for network scanning and vulnerability assessment, improving detection and mitigation strategies.</li>
+                                        <li>Worked with ELK Stack and Splunk to monitor, analyze, and manage security information and events effectively.</li>
+                                        <li>Participated in reviews, virtual trainings, and assignments to solidify knowledge and demonstrate competence in cybersecurity.</li>
+                                    </ul>
+								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Software Engineer Intern | Gradient Connect | October 2024 - Presesnt</h3>
+									<h3>Software Engineer Intern | Gradient Connect | October 2024 - April 2025</h3>
 									<ul>
 										<li>Enhanced app functionality by setting up navigation and privacy sections, allowing users to access dedicated pages seamlessly; preparing to
 											implement core logic for improved user experience.</li>
