--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<h2>Experience</h2>
 							<div class="features">
                                 <section>
-									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-cogs"></span>
 									<h3>Cyber Security Analyst Intern | Platview Technologies Limited | July 2024 - April 2025</h3>
 									<ul>
                                         <li>Developed and applied foundational cybersecurity principles, enhancing security knowledge and practical skills.</li>
@@ -114,7 +114,7 @@
 									</ul>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-cloud"></span>
 									<h3>Software Engineer Fellow | Headstarter | July - September 2024</h3>
 									<ul>
 										<li>Developed and deployed 5 AI-driven web applications using React JS, Next.js, Firebase, and Vercel, leveraging CI/CD pipelines for iterative deployment.</li>
