--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Experience</h2>
+							<h2>Work Experience</h2>
 							<div class="features">
                                 <section>
-									<span class="icon solid major fa-cogs"></span>
+									<span class="icon solid major fa-wrench"></span>
 									<h3>Cyber Security Analyst Intern | Platview Technologies Limited | July 2024 - April 2025</h3>
 									<ul>
                                         <li>Developed and applied foundational cybersecurity principles, enhancing security knowledge and practical skills.</li>
