--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Work Experience</h2>
+							<h2>Experience</h2>
 							<div class="features">
                                 <section>
 									<span class="icon solid major fa-wrench"></span>
